# amd_gpu_monitor

./: .gitignore  README.md  pyproject.toml  run.sh
src/: debug_class.py  diagnose.py  main.py  monitor.py  ui.py
